2009-01-04 TADA Tadashi <t@tdtds.jp>
	* supported ruby 1.9.1 more, but it dose not work well.

2008-12-16 TADA Tadashi <t@tdtds.jp>
	* index.rb, update.rb: String#size -> String#bytesize.
	* plugin/ja/05referer.rb: escaped backslash more.

2008-12-07 TADA Tadashi <t@tdtds.jp>
	* tdiary/filter/default.rb, tdiary/defaultio.rb, tdiary.rb,
	plugin/00default.rb: added encoding to File::open's parameter. But it
	dosen't work yet.

2008-12-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/lib/compatible.rb: add compatible.rb

2008-12-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* **/*.rb: insert magic comment.

2008-11-17 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* index.rb, update.rb: replaced $defout to $stdout. ($defout is obsolete in ruby1.8) 

2008-10-31 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: escaped comment_form_text. thx fudan.

2008-10-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/90migrate.rb: fixed error when a.dat is not exist.

2008-10-25 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: 'update.cgi' -> 'update.rb'

2008-10-19 TADA Tadashi <sho@spc.gr.jp>
	* release 2.3.1.

2008-10-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/90migrate.rb: supported a.dat (a.rb plugin's dictionary).

2008-09-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fixed #119: Insecure error in CGI::https? when runnning on
	secure mode.

2008-08-18 TADA Tadashi <sho@spc.gr.jp>
	* misc/lib/hikidoc.rb: replaced HikiDoc library by 0.0.2.

2008-08-08  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/90migrate.rb: fix typos to convert category cache correctly.
	set @conf.tdiary_version just after converting tdiary.conf to prevent
	converting twice.

2008-08-05 TADA Tadashi <sho@spc.gr.jp>
	* defaultio.rb: detected error of no style file.
	* plugin/00default.rb: fixed #104, error on no existent day.

2008-08-01 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, 00default.rb: set @date starting with plugin running.

2008-07-18 TADA Tadashi <sho@spc.gr.jp>